--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <p>OUR IMPACT</p>
             <h2>Nemo enim ipsam voluptatem quia voluptas</h2>
           </div>
-          <div class="ourcar"><img src="/img/car.png" width="498" alt="car"></div>
+          <div class="ourcar"><img src="img/car.png" width="498" alt="car"></div>
           <div class="service">
             <div class="serviceItem">
               <div class="serviceimg">
